--- a/taotao-manager/taotao-manager-service/pom.xml
+++ b/taotao-manager/taotao-manager-service/pom.xml
@@ -20,6 +20,13 @@
 	    <artifactId>taotao-manager-interface</artifactId>
 	    <version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+    	<groupId>com.taotao</groupId>
+		<artifactId>taotao-content-interface</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    
+  	
   	<!-- Spring和zookeeper依赖 -->
 	<dependency>
 		<groupId>org.springframework</groupId>
