--- a/taotao-search/pom.xml
+++ b/taotao-search/pom.xml
@@ -32,8 +32,20 @@
   				<port>8084</port>
   			</configuration>
   		</plugin>
+  		
+  	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+  		
   	</plugins>
   </build>
+  
+  
+  
   
 
 </project>
