--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -1,12 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.taotao</groupId>
-  <artifactId>taotao-parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  
-  <!-- 集中定义依赖版本号 -->
-  <properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.taotao</groupId>
+	<artifactId>taotao-parent</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+
+	<!-- 集中定义依赖版本号 -->
+	<properties>
 		<junit.version>4.12</junit.version>
 		<spring.version>4.2.4.RELEASE</spring.version>
 		<mybatis.version>3.2.8</mybatis.version>
@@ -36,6 +38,8 @@
 		<freemarker.version>2.3.23</freemarker.version>
 		<quartz.version>2.2.2</quartz.version>
 		<fastdfs-client-java.version>1.27-SNAPSHOT</fastdfs-client-java.version>
+		<jmail.version>1.6.2</jmail.version>
+		<javax.mail.version>1.5.5</javax.mail.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -223,16 +227,26 @@
 				<artifactId>freemarker</artifactId>
 				<version>${freemarker.version}</version>
 			</dependency>
- 			<!--fastdfs-client-java  -->
- 			<dependency>
-			     <groupId>org.csource</groupId>
-			     <artifactId>fastdfs-client-java</artifactId>
-			     <version>${fastdfs-client-java.version}</version>
-             </dependency>
- 			
+			<!--fastdfs-client-java -->
+			<dependency>
+				<groupId>org.csource</groupId>
+				<artifactId>fastdfs-client-java</artifactId>
+				<version>${fastdfs-client-java.version}</version>
+			</dependency>
+			<!-- JMail组件 -->
+			<dependency>
+				<groupId>javax.mail</groupId>
+				<artifactId>javax.mail-api</artifactId>
+				<version>${jmail.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.mail</groupId>
+				<artifactId>javax.mail</artifactId>
+				<version>${javax.mail.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
- 
+
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
@@ -268,5 +282,5 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-	
+
 </project>
