--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -34,11 +34,12 @@
 		<dubbo.version>2.5.3</dubbo.version>
 		<zookeeper.version>3.4.7</zookeeper.version>
 		<zkclient.version>0.1</zkclient.version>
-		<activemq.version>5.11.2</activemq.version>
 		<freemarker.version>2.3.23</freemarker.version>
 		<quartz.version>2.2.2</quartz.version>
 		<fastdfs-client-java.version>1.27-SNAPSHOT</fastdfs-client-java.version>
 		<jmail.version>1.5.0-b01</jmail.version>
+		<!--  <activemq.version>5.11.2</activemq.version>  -->
+		<activemq.version>5.15.9</activemq.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -216,11 +217,11 @@
 				<artifactId>zkclient</artifactId>
 				<version>${zkclient.version}</version>
 			</dependency>
-			<dependency>
+		<!-- 	<dependency>
 				<groupId>org.apache.activemq</groupId>
 				<artifactId>activemq-all</artifactId>
 				<version>${activemq.version}</version>
-			</dependency>
+			</dependency> -->
 			<dependency>
 				<groupId>org.freemarker</groupId>
 				<artifactId>freemarker</artifactId>
@@ -238,6 +239,12 @@
 				<artifactId>mail</artifactId>
 				<version>${jmail.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>activemq-all</artifactId>
+				<version>${activemq.version}</version>
+			</dependency>
+
 
 		</dependencies>
 	</dependencyManagement>
