--- a/taotao-search/taotao-search-service/pom.xml
+++ b/taotao-search/taotao-search-service/pom.xml
@@ -88,6 +88,13 @@
 	    	</exclusion>
 	    </exclusions> -->
 	</dependency>
+	
+     <!-- activemq组件 -->
+ 	<dependency>
+		<groupId>org.apache.activemq</groupId>
+		<artifactId>activemq-all</artifactId>
+	</dependency>
+	
   </dependencies>
   
 
