--- a/taotao-manager/taotao-manager-service/pom.xml
+++ b/taotao-manager/taotao-manager-service/pom.xml
@@ -20,11 +20,7 @@
 	    <artifactId>taotao-manager-interface</artifactId>
 	    <version>0.0.1-SNAPSHOT</version>
   	</dependency>
-  	<dependency>
-    	<groupId>com.taotao</groupId>
-		<artifactId>taotao-content-interface</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-    </dependency>
+  
     
   	
   	<!-- Spring和zookeeper依赖 -->
@@ -92,7 +88,11 @@
 	    <artifactId>activemq-all</artifactId>
 	</dependency>
 	
-	
+		<!-- Redis客户端 -->
+	<dependency>
+		<groupId>redis.clients</groupId>
+		<artifactId>jedis</artifactId>
+	</dependency>
 	
 	
   </dependencies>
