修改配置更新

--- a/taoao-order/taotao-order-service/pom.xml
+++ b/taoao-order/taotao-order-service/pom.xml
@@ -87,6 +87,11 @@
 			<scope>test</scope>
 	</dependency>
 	
+	<!-- quartz任务调度框架 -->
+	<dependency>
+		<groupId>org.quartz-scheduler</groupId>
+		<artifactId>quartz</artifactId>
+	</dependency>
   </dependencies>
   
   
