--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -40,6 +40,7 @@
 		<jmail.version>1.5.0-b01</jmail.version>
 	<!-- 	 <activemq.version>5.11.2</activemq.version>  -->
 		<activemq.version>5.15.9</activemq.version>
+		<quartz.version>2.3.1</quartz.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -245,6 +246,12 @@
 				<version>${activemq.version}</version>
 			</dependency>
 
+			<!-- quartz任务调度框架 -->
+			<dependency>
+				<groupId>org.quartz-scheduler</groupId>
+				<artifactId>quartz</artifactId>
+				<version>${quartz.version}</version>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
